--- a/build.properties
+++ b/build.properties
@@ -1,7 +1,7 @@
 #System Properties
 cr=${line.separator}
-project.revision=7.1-SNAPSHOT
-version=7.1-SNAPSHOT
+project.revision=7.1.0.14-146
+version=7.1.0.14-146
 impl.vendor=Pentaho Corporation
 impl.version=${version}
 impl.title=Pentaho Data Integration
@@ -94,17 +94,17 @@ lib.dir=lib
 ivyfile=ivy.xml
 
 # Dependency revisions
-dependency.kettle.revision=7.1-SNAPSHOT
-dependency.pentaho-metadata.revision=7.1-SNAPSHOT
-dependency.mondrian.revision=3.14-SNAPSHOT
-dependency.pentaho-connections.revision=7.1-SNAPSHOT
-dependency.pentaho-reporting.revision=7.1-SNAPSHOT
+dependency.kettle.revision=7.1.0.14-146
+dependency.pentaho-metadata.revision=7.1.0.14-146
+dependency.mondrian.revision=3.14.0.14-146
+dependency.pentaho-connections.revision=7.1.0.14-146
+dependency.pentaho-reporting.revision=7.1.0.14-146
 dependency.reporting-engine.group=pentaho-reporting-engine
-dependency.pentaho-xul.revision=7.1-SNAPSHOT
-dependency.pentaho-vfs-browser.revision=7.1-SNAPSHOT
-dependency.pentaho-reporting-core.revision=7.1-SNAPSHOT
-dependency.pdi-palo-plugin.revision=7.1-SNAPSHOT
-dependency.launcher.revision=7.1-SNAPSHOT
+dependency.pentaho-xul.revision=7.1.0.14-146
+dependency.pentaho-vfs-browser.revision=7.1.0.14-146
+dependency.pentaho-reporting-core.revision=7.1.0.14-146
+dependency.pdi-palo-plugin.revision=7.1.0.14-146
+dependency.launcher.revision=7.1.0.14-146
 
 # Checkstyle Properties
 checkstyle.version=6.12
