--- a/dbdialog/build.properties
+++ b/dbdialog/build.properties
@@ -1,9 +1,9 @@
 #System Properties
-dependency.kettle.revision=7.1-SNAPSHOT
+dependency.kettle.revision=7.1.0.14-146
 ivy.artifact.id=kettle-dbdialog
 ivy.artifact.group=pentaho-kettle
-version=7.1-SNAPSHOT
-project.revision=7.1-SNAPSHOT
+version=7.1.0.14-146
+project.revision=7.1.0.14-146
 impl.vendor=Pentaho Corporation
 impl.version=${version}
 impl.title=Pentaho Data Integration
@@ -15,12 +15,12 @@ build=bin
 dist=dist
 
 # Dependency revisions
-dependency.mondrian.revision=3.14-SNAPSHOT
-dependency.pentaho-metadata.revision=7.1-SNAPSHOT
-dependency.pentaho-connections.revision=7.1-SNAPSHOT
-dependency.pentaho-reporting.revision=7.1-SNAPSHOT
+dependency.mondrian.revision=3.14.0.14-146
+dependency.pentaho-metadata.revision=7.1.0.14-146
+dependency.pentaho-connections.revision=7.1.0.14-146
+dependency.pentaho-reporting.revision=7.1.0.14-146
 dependency.reporting-engine.group=pentaho-reporting-engine
-dependency.pentaho-xul.revision=7.1-SNAPSHOT
+dependency.pentaho-xul.revision=7.1.0.14-146
 
 # Release type is either "se" or "open"
 product.release.type=open
